@@ -1,3 +1,12 @@
+2026-02-12T12:41:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21947012097 # 1437
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 1145 3285 / 1157 3317
+* notice: next accum: outdated-unq outdated-all / unq all: 1155 3315 / 1159 3320
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27] / []
+
 2026-02-12T01:15:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21929706888 # 1436
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
